# helios

./: .env.bak  .env.example  .env.new  .gitignore  CURSOR_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  INTEGRATION_CHECKLIST.md  README.md  TROUBLESHOOTING.md  agents.py  agents.py.bak  alembic.ini  config.py  docker-compose.yml  env.example  error_log_full.txt  fix_environment.py  main.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  run_helios.py  test_config.py  test_imports.py  test_logging.py  test_qwen_direct.py  validate_qwen_api.py  verify_env.py
.github/workflows/: ci.yml  deploy.yml  tests.yml
backend/: DEBUGGING_MANUAL.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  README_INTEGRATION.md  agent_team.py  env_template.txt  main.py  pytest.ini  requirements.txt  websockets.py
backend/agents/: __init__.py  adaptor.py  analyst.py  researcher.py  strategist.py
backend/config/: model_config.py
examples/: plan_example.py
frontend/: README.md
helios/: __init__.py  main_api.py  main_api_simple.py
helios-frontend/: .gitignore  Dockerfile  Dockerfile.frontend  PERFORMANCE_OPTIMIZATION.md  env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
helios_backend/: Dockerfile  __init__.py  agent_core.py  config.py  main.py  requirements.txt  tools.py
migrations/: env.py
scripts/: create_structure.ps1
static/: index.html  style.css
tests/: __init__.py  conftest.py  test_agents.py  test_backend_agents.py  test_config.py  test_goal_analyst.py  test_integration_fsm.py
(+82 files in other folders)
